[package]
name = "io-at"
version = "0.1.8"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmesmon/io-at"
description = "Traits and wapper type implimenting Read and Write with offsets"
keywords = [ "io", "offset", "at" ]

[target.'cfg(unix)'.dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies]
winapi = "*"
kernel32-sys = "*"

[dev-dependencies]
tempfile = "*"
