[package]
name = "io-at"
version = "0.2.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmesmon/io-at"
description = "Traits and wapper type implimenting Read and Write with offsets"
keywords = [ "io", "offset", "at", "position" ]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
tempfile = "2"
