[package]
name = "io-at"
version = "0.4.1"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmesmon/io-at"
description = "Traits for Read and Write with offsets, wrapper types & core impls"
keywords = [ "io", "offset", "at", "position" ]
include = [ "Cargo.toml", "**/*.rs" ]
documentation = "http://codyps.com/docs/io-at/x86_64-unknown-linux-gnu/stable/io_at/index.html"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
tempfile = "2"
